...
            app:iconGravity="end"
            app:iconSize="20sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/EventListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
...
