...
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/announcementButtonLayout">

        <Button
            android:id="@+id/btnViewPromoQRCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Event Promo Code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnViewAnnouncements" />
...
